--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
           padding: 10px;
      }
      i:hover{
-          background-color: greenyellow;
+          background-color: rgb(183, 92, 0);
           cursor: pointer;
+          color: aliceblue;
      }
 </style>
 <body>
